--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                 <p class="soc-title">Subscribe</p>
                 <form class="form-subscribe">
                     <label class="form-label" for="email">
-                        <input class="form-input" name="email" id="email" placeholder="E-mail" >
+                        <input class="form-input" name="email" id="email" type="email" placeholder="E-mail" >
                     </label>
                     <button class="subs-btn" type="submit">Subscribe
                         <svg class="sub-btn-icon" width="24" height="24">
